--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
     <groupId>org.example</groupId>
     <artifactId>java-sream-exercises</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <properties>
+        <maven.compiler.target>1.11</maven.compiler.target>
+        <maven.compiler.source>1.11</maven.compiler.source>
+    </properties>
 
 </project>
